fix: text aligning with longer titles

--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,8 @@ h3 {
     font-weight: 500;
     font-style: normal;
     font-size: 1.25rem;
+
+    text-align: left;
 }
 
 h4 {
